# restaurant

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yml
migrations/2021-03-15-135017_create_tables/: down.sql  up.sql
src/: error.rs  main.rs  schema.rs
src/domain/: menu.rs  menu_service.rs  mod.rs  order_service.rs  session_service.rs  table_service.rs
src/driver/: kitchen.rs
src/endpoints/: menu.rs  mod.rs  order.rs  session.rs  systems.rs  table.rs
src/models/: menu.rs  mod.rs
testing/py/: test_rest.py  test_setup.py
