[package]
name = "restaurant"
version = "0.1.0"
authors = ["ljw <liamv7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-rt = "2.1.0"
actix-web = "3.3.2"
actix-http = "2.2.0"
actix-service = "1.0.5"
log = "0.4.0"
env_logger = "0.8.3"
futures = "0.3.4"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
dotenv = "0.15.0"
config = "0.10.1"
failure = "0.1"
awc = "2.0.3"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
diesel = { version = "1.4.6", features = ["postgres", "chrono", "r2d2", "uuidv07"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
lazy_static = "1.4.0"
